--- a/portfolio/angular.json
+++ b/portfolio/angular.json
@@ -31,8 +31,8 @@
 
             ],
             "scripts": [
-              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
-              "node_modules/jquery/dist/jquery.slim.min.js"
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
+
             ]
           },
           "configurations": {
