--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -23,6 +23,7 @@
     "bootstrap": "^5.3.0-alpha3",
     "bootstrap-icons": "^1.10.5",
     "jquery": "^3.6.4",
+    "ng-circle-progress": "^1.7.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
