commit cambiar direccion del proyecto fibase
de firebaseapp.com(algo asi) a denisefrontend.web.app

--- a/portfolio/.firebaserc
+++ b/portfolio/.firebaserc
@@ -1,5 +1,18 @@
 {
   "projects": {
     "default": "denisefrontend"
-  }
+  },
+  "targets": {
+    "denisefrontend": {
+      "hosting": {
+        "nombre-del-proyecto": [
+          "identificador-del-sitio"
+        ],
+        "denisefrontend": [
+          "https://denisefrontend.web.app"
+        ]
+      }
+    }
+  },
+  "etags": {}
 }
